# tacagaita

./: Cargo.toml
src/: camera.rs  components.rs  enums.rs  game_init_screen.rs  geometry.rs  gl_program.rs  helpers.rs  lib.rs  main.rs  main_menu.rs  scene.rs  shader.rs  splash_screen_plugin.rs  textures.rs  transformation.rs  user_interface.rs  window.rs
src/shaders/: main_triangle.frag  main_triangle.vert  second_triangle.vert  set_color_blue.frag  triangle_fragment_shader.glsl  triangle_vertex_shader.glsl
