[package]
name = "tocagaita"
version = "0.1.0"
authors = ["Tomaz Canabrava <tcanabrava@kde.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"

[dependencies.glfw]
version = "0.41.0"
features = ["all"]