[package]
name = "tocagaita"
version = "0.1.0"
authors = ["Tomaz Canabrava <tcanabrava@kde.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
image = "0.23"
itertools = "0.10"
nalgebra = "0.24"
nalgebra-glm = "0.10"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"

[dependencies.glfw]
version = "0.41.0"
features = ["all"]